* Old class GoGame was removed, GoGameRecord renamed to GoGame. GoGame
  does no longer provide non-const access to the tree and game state to
  guarantee its class invariants
* Made GoPlayer to store its search traces instead of appending them directly
  to the game tree
* Several optimizations to speed up the Monte-Carlo searches.
* Fuego now can be compiled natively on Windows with Visual C++.

Version 0.4.1 - 2009 Dec 23
===========================
[Note that the numbering for this version is misleading. This is not a
bugfix release from the stable branch after version 0.4 (VERSION_0_4_FIXES),
but a new release with new and incompatible features from the main branch.]

* Replaced linked list SgList and related functions by SgVector - a wrapper
  around std:vector with the same interface as SgList. Changed implementations
  that added or removed from front of list for efficiency.
* Added hooks for supporting MPI distributed memory implementations
* Add small opening book for 5x5
* Improved 9x9 opening book
* Added link to optional big 19x19 opening books at Ben Lambrechts' site
* Fixed several bugs in static safety solver
* Updated to compile with gcc 4.4.0
* Implemented SgBalancer to achieve roughly equal number of Black and White 
  moves of a specific type in playouts
* Implemented randomized use of RAVE for SelectChild
* Support for proven nodes in SgUctSearch
* Support for kgs-time_settings and different KGS overtime modes
* Refactored SgSearch, reduce size of huge functions. 
* In SgSearch::SearchEngine, use a stack instead of a vector for efficiency
* New max_memory option to uct_param_search makes Fuego easier to configure
* Implement forced opening moves in GoUctPlayer
* Set bias term constant to 0 by default on all boardsizes

Version 0.4 - 2009 May 22
=========================

* Remove SgStreamFmtRestorer; use Boost IO State Savers instead 
* Remove SgUctPriorKnowledge; Derived thread state class will supply knowledge